--- a/Site_RAW/style.css
+++ b/Site_RAW/style.css
@@ -59,8 +59,7 @@ footer {
     
     background-color: white;
     text-align: center;
-    position: fixed;
-    width: 100%;
+    position: relative;
     bottom: 0;
     padding: 1em;
 }
