--- a/atividade-displayflex/style.css
+++ b/atividade-displayflex/style.css
@@ -10,7 +10,7 @@ body{
 
 .cabecalho{
     background-color: rgb(72, 121, 121);
-    width: 20%;
+    width: 15%;
     height: 100vh;
     position: static;
     padding: 1em;
@@ -52,7 +52,8 @@ main{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 80%;
+    min-width: 40%;
+    max-width: 55%;
     row-gap: 1em;
 }
 
