--- a/atividade-grid/style.css
+++ b/atividade-grid/style.css
@@ -32,8 +32,6 @@ body{
 main{
     margin-top: 1em;
     display: grid;
-    grid-template-columns: 200px;
-    grid-template-columns: 4fr 4fr;
 }
 
 .navegacao{
@@ -52,7 +50,7 @@ main{
     padding: 1em;
 }
 
-.box{
+.box-evento{
     background-color: rgb(236, 236, 236);
     display: flex;
     width: 11em;
@@ -61,7 +59,7 @@ main{
     align-items: center;
 }
 
-.box span{
+.box-evento span{
     color:#224459;
     font-weight: bold;
 }
@@ -88,6 +86,23 @@ main{
     flex-basis: 100%;
     margin-bottom: 1em;
 }
+
+
+.box-organizacao{
+    background-color: rgb(236, 236, 236);
+}
+
+.inscricao{
+    display: flex;
+    width: 20%;
+    justify-content: center;
+    background-color: rgb(236, 236, 236);
+}
+
+.inscricao-2{
+    width: 90%; 
+}
+
 
 td{
     border: 1px solid rgb(255, 255, 255);
