--- a/atividade-grid/style.css
+++ b/atividade-grid/style.css
@@ -73,6 +73,33 @@ main{
     padding: 1em;
 
 }
+
+.box-palestras{
+    background-color: rgb(236, 236, 236);
+
+}
+
+img{
+    filter: grayscale(80%);
+}
+
+.imagem-1{
+    justify-content: center;
+    width: 209px;
+    height: 139px;
+    display: flex;
+    position: relative;
+    color: white;
+}
+
+.texto-central{
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
 .programacao table{
     flex-basis: 100%;
     border-collapse: collapse;
@@ -90,12 +117,14 @@ main{
 
 .box-organizacao{
     background-color: rgb(236, 236, 236);
+    width: 25%;
 }
 
 .inscricao{
     display: flex;
     width: 20%;
     justify-content: center;
+    align-items: center;
     background-color: rgb(236, 236, 236);
 }
 
@@ -103,6 +132,17 @@ main{
     width: 90%; 
 }
 
+.inscricao h2{
+    margin-bottom: 1em;
+}
+
+input[type=button]{
+    padding: 0.2em;
+    background-color: rgb(32, 33, 38);
+    color: white;
+    width: 6em;
+    height: 3em;
+}
 
 td{
     border: 1px solid rgb(255, 255, 255);
