--- a/atividade-grid/style.css
+++ b/atividade-grid/style.css
@@ -5,175 +5,84 @@
 }
 
 body{
-    min-height: 100vh;
+    background-color: #ffffff;
+    display: grid;    
+    grid-template-columns: auto auto auto auto auto auto;
+    grid-template-rows: auto auto auto auto auto;
+    grid-template-areas: 
+    'header header header header header header'
+    'nav    box-1  prog   prog   prog   p1    '
+    'nav    box-2  ins    ins    p2     p3    '
+    'nav    p4     ins    ins    org    org   '
+    'footer footer footer footer footer footer';
+    gap: 1em;
+    max-width: 100%;
 }
 
-main {
-    display: grid;
-    margin-top: 1em;
-    grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 15px;
-    grid-template-areas:
-        "nav box-evento programacao  programacao imagem-1"
-        "nav box-palestras inscricao   imagem-3    imagem-2"
-        "nav imagem-4    inscricao   organizacao organizacao";
-}
-
-.navegacao       { grid-area: nav; }
-.box-evento      { grid-area: box-evento; }
-.programacao     { grid-area: programacao; }
-.box-palestras   { grid-area: box-palestras; }
-.inscricao       { grid-area: inscricao; }
-.imagem-1        { grid-area: imagem-1; }
-.imagem-2        { grid-area: imagem-2; }
-.imagem-3        { grid-area: imagem-3; }
-.imagem-4        { grid-area: imagem-4; }
-.box-organizacao { grid-area: organizacao; }
-
-.cabecalho{
-    background: linear-gradient(to left,#7292A6, #224459);
-    width: 100hv;
-    padding: 1em;
-
-}
-
-.cabecalho div{
+header{
     display: flex;
+    background-color: blue;    
+    grid-area: header;
     flex-wrap: wrap;
 }
 
-.cabecalho h1{
+header h1{
     flex-basis: 100%;
-    color: white;
 }
 
-.cabecalho h2{
-    color: white;
-}
-
-main{
-    margin-top: 1em;
-    display: grid;
-}
-
-.navegacao{
-    background-color: rgb(197, 209, 217);
-    padding: 1em;
+nav{
     display: flex;
-    justify-content: center;
-    width: 10em;
+    grid-area: nav;
 }
 
-.navegacao ul{
-    list-style: none;
-}
-
-.navegacao li{
-    padding: 1em;
-}
-
-.box-evento{
-    background-color: rgb(236, 236, 236);
+.box-1{
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.box-evento span{
-    color:#224459;
-    font-weight: bold;
-}
-
-.programacao{
     background-color: rgb(236, 236, 236);
+    grid-area: box-1;
+}
+
+.prog{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 1em;
-
+    background-color: rgb(236, 236, 236);
+    grid-area: prog;
 }
 
-.box-palestras{
-    background-color: rgb(236, 236, 236);
-    padding: 2em;
-    width: 10em;
+.p1{
+    grid-area: p1;
+}
 
+.box-2{
+    background-color: rgb(236, 236, 236);
+    grid-area: box-2;
+}
+
+.ins{
+    background-color: rgb(236, 236, 236);
+    grid-area: ins;
+}
+
+.p2{
+    grid-area: p2;
+}
+
+.p3{
+    grid-area: p3;
+}
+
+.p4{
+    grid-area: p4;
+}
+
+.org{
+    grid-area: org;
 }
 
 img{
-    filter: grayscale(80%);
-}
-
-.imagem-1{
-    justify-content: center;
-    display: flex;
-    position: relative;
-    color: white;
-}
-
-.texto-central{
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
-}
-
-.programacao table{
-    flex-basis: 100%;
-    border-collapse: collapse;
-}
-
-.programacao table td{
-    padding: 0.2em;
-}
-
-.programacao h2{
-    flex-basis: 100%;
-    margin-bottom: 1em;
-}
-
-
-.box-organizacao{
-    background-color: rgb(236, 236, 236);
-    width: 25%;
-}
-
-.inscricao{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(236, 236, 236);
-}
-
-.inscricao-2{
-    width: 90%; 
-}
-
-.inscricao h2{
-    margin-bottom: 1em;
-}
-
-input[type=button]{
-    padding: 0.2em;
-    background-color: rgb(32, 33, 38);
-    color: white;
-    width: 6em;
-    height: 3em;
-}
-
-td{
-    border: 1px solid rgb(255, 255, 255);
+    width:50%;
+    height: auto;
 }
 
 footer{
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    height: 5em;
-    background-color: #224459;
-    color: white;
+    background-color: blue;
+    grid-area: footer;
 }
-
