--- a/atividade-grid/style.css
+++ b/atividade-grid/style.css
@@ -60,6 +60,7 @@ nav li{
     display: flex;
     background-color: rgb(236, 236, 236);
     grid-area: box-1;
+    padding: 1em;
 }
 
 .prog{
@@ -73,7 +74,7 @@ nav li{
 
 .prog h2{
     flex-basis: 100%;
-    padding: 0.2em;
+    margin-bottom: 1em;
 }
 
 table{
@@ -93,6 +94,11 @@ table td{
 .box-2{
     background-color: rgb(236, 236, 236);
     grid-area: box-2;
+    padding: 1em;
+}
+
+.box-2 ul{
+    list-style-position: inside;
 }
 
 .ins{
@@ -115,11 +121,21 @@ table td{
 .org{
     background-color: rgb(236, 236, 236);
     grid-area: org;
+    padding: 1em;
+}
+
+.org h2{
+    margin-bottom: 1em;
+}
+
+.org ul{
+    list-style-position: inside;
 }
 
 img{
-    width:50%;
-    height: auto;
+    width:100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 span{
@@ -128,8 +144,11 @@ span{
 }
 
 footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #224459;
+    height: 5em;
     color: white;
-    text-align: center;
     grid-area: footer;
 }
