--- a/atividade-grid/style.css
+++ b/atividade-grid/style.css
@@ -9,7 +9,7 @@ body{
     height: 100vh;
     background-color: #ffffff;
     display: grid;    
-    grid-template-columns: auto auto auto auto auto auto;
+    grid-template-columns: auto 15% 10% 10% auto auto;
     grid-template-rows: auto auto auto auto auto;
     grid-template-areas: 
     'header header header header header header'
@@ -53,7 +53,7 @@ nav ul{
 
 nav li{
     padding-bottom: 1em;
-    font-size: larger;
+    font-size: xx-large;
 }
 
 .box-1{
@@ -104,6 +104,11 @@ table td{
 .ins{
     background-color: rgb(236, 236, 236);
     grid-area: ins;
+    padding: 1em;
+}
+
+.ins h2{
+    margin-bottom: 1em;
 }
 
 .p2{
