--- a/atividade-grid/style.css
+++ b/atividade-grid/style.css
@@ -9,8 +9,8 @@ body{
     height: 100vh;
     background-color: #ffffff;
     display: grid;    
-    grid-template-columns: auto 15% 10% 10% auto auto;
-    grid-template-rows: auto auto auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; 
+    grid-template-rows: auto 1fr 1fr 1fr auto;
     grid-template-areas: 
     'header header header header header header'
     'nav    box-1  prog   prog   prog   p1    '
@@ -88,7 +88,25 @@ table td{
 }
 
 .p1{
+    display: flex;
+    background-image: url(imagens/amanda.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: grayscale(80%);
+    justify-content: center;
+    align-items: center;
     grid-area: p1;
+}
+
+.descricao{  
+    display: flex;
+    justify-content: center;
+    flex-basis: 100%;
+    color: white;
+    height: 3em;
+    align-items: center;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .box-2{
@@ -112,14 +130,35 @@ table td{
 }
 
 .p2{
+    display: flex;
+    background-image: url(imagens/georgia.jpg);    
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: grayscale(80%);
+    justify-content: center;
+    align-items: center;
     grid-area: p2;
 }
 
 .p3{
+    display: flex;
+    background-image: url(imagens/henrique.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: grayscale(80%);
+    justify-content: center;
+    align-items: center;
     grid-area: p3;
 }
 
 .p4{
+    display: flex;
+    background-image: url(imagens/ellen.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: grayscale(80%);
+    justify-content: center;
+    align-items: center;
     grid-area: p4;
 }
 
