--- a/atividade-grid/style.css
+++ b/atividade-grid/style.css
@@ -57,10 +57,16 @@ nav li{
 }
 
 .box-1{
-    display: flex;
     background-color: rgb(236, 236, 236);
     grid-area: box-1;
     padding: 1em;
+}
+
+.button{
+    margin-top: 1em;
+    display: inline-block;
+    color: rgb(51, 115, 138);
+    border: 1px solid rgb(51, 115, 138);
 }
 
 .prog{
@@ -127,6 +133,20 @@ table td{
 
 .ins h2{
     margin-bottom: 1em;
+}
+
+input[type=text], input[type=email], input[type=tel]{
+    
+    height: 2em;
+    padding: 0.3em;
+}
+
+input[type=button]{
+    border: none;
+    width: 50%;
+    padding: 1em;
+    background-color: #0e202b;
+    color: rgb(180, 180, 180);
 }
 
 .p2{
