--- a/atividade-submenu/style.css
+++ b/atividade-submenu/style.css
@@ -1,6 +1,11 @@
 *{
     padding: 0;
     margin: 0;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+body{
+    background-color: rgb(247, 247, 247);
 }
 
 nav{
@@ -10,17 +15,25 @@ nav{
 nav div{
     flex-basis: 100%;
     background-color: rgb(18, 42, 77);
-    border: 1px solid navy;
+    padding-left: 1em;;
 }
 
-h2{
+a{
+    text-decoration: none;
     color: white;
-    text-align: center;
+}
+
+
+h1{
+    color: white;
+    padding-left: 1em;
 }
 
 .diatinf{
-    background-color: blue;
-    height: 10em;
+    display: flex;
+    align-items: center;
+    background: linear-gradient(to left,#7292A6, #224459);
+    height: 5em;
     width: 100%;
 }
 
@@ -36,15 +49,12 @@ h2{
 }
 
 .dropdown-content a{
-    color: black;
-    text-decoration: none;
-    color: white;
     display: block;
     padding: 1em;
 }
 
 .dropdown-content a:hover{
-    background-color: aqua;
+    background-color: rgb(211, 211, 238);
 }
 
 .dropdown:hover .dropdown-content{
