--- a/site-raw/style.css
+++ b/site-raw/style.css
@@ -1,4 +1,95 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
+    font-family: Jost;
+}
+
+/* Formatação do Cabeçalho */
+
+header{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    background-color: antiquewhite;
+    padding: 1em;
+    height: 5em;
+}
+
+header picture{
+    position: absolute;
+    left: 1em;
+}
+
+header picture img{
+    width: 50%;
+    height: auto;
+}
+
+header h1{
+    font-weight: normal;
+    text-align: center;
+}
+
+header nav ul{
+    display: flex;
+    justify-content: center;
+    gap: 1em;
+    list-style: none;
+}
+
+/* Fim Formatação do Cabeçalho */
+
+
+/* Formatação Main */
+
+main{
+    background-color: beige;
+    margin: auto;
+    height: 100vh;
+    width: 1200px;
+    padding: 3em 1em 1em 2em;
+}
+
+main section{
+    display: grid;
+    grid-template-columns: 200px 200px 150px 150px;
+    grid-template-rows: auto auto;
+    grid-template-areas:
+    'p p i i'
+    'p p i i';
+}
+
+main section article{
+    background-color: bisque;
+    padding: 2em;
+    grid-area: p;
+}
+
+main section picture{
+    grid-area: i;
+}
+
+main section img{
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+article h2{
+    text-align: center;
+    border-bottom: 1px solid black;
+ }
+
+ /*Fim Formatação Main */
+
+
+/* Formatação Rodapé */
+
+footer{
+    padding: 1em;
+    bottom: 0;
+    text-align: center;
+    background-color: blanchedalmond;
 }
