--- a/site-raw/style.css
+++ b/site-raw/style.css
@@ -39,6 +39,20 @@ header nav ul{
     list-style: none;
 }
 
+header nav h1 a{
+    color: black;
+    text-decoration: none;
+}
+
+header nav ul li a{
+    color: black;
+    text-decoration: none;
+}
+
+header nav ul li a:hover{
+    color: black;
+    border-bottom: 1px solid black
+}
 /* Fim Formatação do Cabeçalho */
 
 
@@ -47,18 +61,23 @@ header nav ul{
 main{
     background-color: beige;
     margin: auto;
-    height: 100vh;
-    width: 1200px;
-    padding: 3em 1em 1em 2em;
+    height: 100%;
+    width: 900px;
+    padding: 2em 3em 2em;
 }
 
 main section{
     display: grid;
-    grid-template-columns: 200px 200px 150px 150px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto;
     grid-template-areas:
     'p p i i'
     'p p i i';
+}
+
+article h2{
+    text-align: center;
+    border-bottom: 1px solid black;
 }
 
 main section article{
@@ -77,10 +96,18 @@ main section img{
     object-fit: cover;
 }
 
-article h2{
-    text-align: center;
-    border-bottom: 1px solid black;
- }
+main ul{
+    margin-top: 10em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 2em;
+}
+
+main ul li{
+    list-style-type: none;
+    
+}
 
  /*Fim Formatação Main */
 
